# ozelot

./: Cargo.toml  README.md
examples/: textclient.rs
src/: client.rs  json.rs  lib.rs
