[package]
name = "ozelot-njaldwin"
version = "0.8.0-alpha"
authors = ["C4K3 <crates.io@c4k3.net>", "NJAldwin <Nick@Aldw.in>"]
description = "Handles everything network related to MCMODERN.  [NJAldwin's fork of C4K3's ozelot]"
documentation = "https://c4k3.net/rustdocs/ozelot/ozelot/"
repository = "https://github.com/NJAldwin/ozelot/"
keywords = ["minecraft", "mc", "mcmodern"]
categories = ["games"]
license = "CC0-1.0"

[dependencies]
byteorder = "1"
flate2 = "1"
netbuf = "0.4"
openssl = "0.9"
curl = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
error-chain = "0.11"

[dev_dependencies]
rpassword = "2"
getopts = "0.2"

